--- a/Result-new.html
+++ b/Result-new.html
@@ -25,7 +25,6 @@
 
     .subtitle {
       font-size: 1.2rem;
-      font-weight: 400;
       margin-bottom: 30px;
     }
 
@@ -36,20 +35,20 @@
       line-height: 1.6;
     }
 
-    .blue { background-color: #064D95; }
-    .green { background-color: #06954E; }
     .red { background-color: #950606; }
+    .green { background-color: #06954E; }
+    .blue { background-color: #064D95; }
 
     button {
-      margin-top: 20px;
-      padding: 10px 18px;
-      font-weight: bold;
+      margin: 14px 8px;
+      padding: 10px 20px;
       font-size: 1rem;
-      border: 2px solid white;
-      background-color: transparent;
-      color: white;
+      font-weight: bold;
       font-style: italic;
-      border-radius: 8px;
+      color: white;
+      background: transparent;
+      border: 2px solid #e1bf78;
+      border-radius: 10px;
       cursor: pointer;
     }
 
@@ -59,7 +58,7 @@
 
     .archetype-name {
       font-weight: bold;
-      font-size: 2rem;
+      font-size: 2.2rem;
       margin-bottom: 12px;
     }
 
@@ -68,138 +67,362 @@
       display: block;
       margin: 0 auto 30px auto;
       max-width: 400px;
-      width: 100%;
-      height: auto;
       border: 4px solid gold;
       border-radius: 16px;
       box-shadow: 0 0 8px rgba(255, 215, 0, 0.6);
     }
 
-    @media (min-width: 1024px) {
-      body {
-        padding: 80px 40px;
-        font-size: 22px;
-      }
-
-      .title {
-        font-size: 6rem;
-        margin-bottom: 40px;
-      }
-
-      .subtitle {
-        font-size: 2.4rem;
-        margin-bottom: 40px;
-      }
-
-      .section {
-        font-size: 1.8rem;
-        max-width: 1000px;
-      }
-
-      .archetype-name {
-        font-size: 3.2rem;
-      }
-    }
-
     .slogan {
       font-style: italic;
       font-size: 1.2rem;
-      margin-bottom: 14px;
+      margin-bottom: 16px;
+    }
+
+    .profile-caption a {
+      font-weight: bold;
+      color: gold;
+      text-decoration: underline;
+    }
+
+    @media (min-width: 1024px) {
+      .title { font-size: 6rem; }
+      .subtitle { font-size: 2.4rem; }
+      .archetype-name { font-size: 3.2rem; }
+      .section { font-size: 1.8rem; max-width: 1000px; }
+      .slogan { font-size: 2rem; }
     }
   </style>
 </head>
 <body id="resultBody">
-  <div class="title" id="roomTitle">Meet your type in the <span style="color: #e1bf78;">room</span></div>
+  <div class="title" id="roomTitle">Meet your type in the <span style="color: #e1bf78;">ROOM</span></div>
   <div class="subtitle" id="archetypeText">Your Archetype</div>
-  <div class="section" id="descriptionText"></div>
+  <div class="section" id="compatibilityText"></div>
+
+  <div class="section" id="ctaButtons">
+    <a href="/anonymous-signin.html"><button>Anonymous Sign-In</button></a>
+    <a href="/verified-signin.html"><button>Verified Sign-In</button></a>
+    <button onclick="copyShareURL()">Share Result</button>
+  </div>
 
   <script>
     const params = new URLSearchParams(window.location.search);
-    const gender = params.get("q8");
-    const scores = {};
+    const answers = {};
+    for (let i = 1; i <= 10; i++) {
+      answers[`q${i}`] = params.get(`q${i}`) || "";
+    }
 
-    // Initialize scores
-    const types = [
-      "Devoted Darling", "Mood Multiplier", "Tender Protector", "Heatwave",
-      "Promiscuous Plaything", "Generous Giver", "Bedroom Adventurer", "Charmer in Charge",
-      "Dungeon Master", "Claimed & Trained", "Punish Me", "Provoker"
-    ];
-    types.forEach(t => scores[t] = 0);
+    const gender = answers.q8 === "cat" ? "female" : "male";
+    const scores = {
+      "Devoted Darling": 0, "Mood Multiplier": 0, "Tender Protector": 0, "Heatwave": 0,
+      "Promiscuous Plaything": 0, "Generous Giver": 0, "Bedroom Adventurer": 0, "Charmer in Charge": 0,
+      "Dungeon Master": 0, "Claimed & Trained": 0, "Punish Me": 0, "Provoker": 0
+    };
 
-    // Example score handling for q1
-    const q1 = params.get("q1");
-    if (q1 === "1a") {
+    // Q1 Scoring
+    if (answers.q1 === "1a") {
       scores["Devoted Darling"] += 3;
       scores["Generous Giver"] += 2;
       scores["Tender Protector"] += 2;
       scores["Mood Multiplier"] += 1;
     }
-    if (q1 === "1b") {
+    if (answers.q1 === "1b") {
       scores["Dungeon Master"] += 3;
       scores["Charmer in Charge"] += 2;
       scores["Bedroom Adventurer"] += 1;
     }
-    if (q1 === "1c") {
+    if (answers.q1 === "1c") {
       scores["Punish Me"] += 3;
       scores["Provoker"] += 2;
       scores["Claimed & Trained"] += 1;
     }
-    if (q1 === "1d") {
+    if (answers.q1 === "1d") {
       scores["Promiscuous Plaything"] += 3;
       scores["Mood Multiplier"] += 2;
       scores["Heatwave"] += 1;
     }
 
-    // Repeat for q2 through q10 (not pasted here for brevity, but you already approved all mappings)
-
-    // Find top score
-    let maxScore = -Infinity;
-    let resultType = "";
-    for (let key in scores) {
-      if (scores[key] > maxScore) {
-        maxScore = scores[key];
-        resultType = key;
-      }
+    // Q2 scoring...
+        // Q2 Scoring
+    if (answers.q2 === "2a") {
+      scores["Devoted Darling"] += 3;
+    }
+    if (answers.q2 === "2b") {
+      scores["Claimed & Trained"] += 3;
+      scores["Promiscuous Plaything"] += 2;
+      scores["Punish Me"] += 1;
+    }
+    if (answers.q2 === "2c") {
+      scores["Dungeon Master"] += 3;
+      scores["Charmer in Charge"] += 2;
+      scores["Tender Protector"] += 1;
+    }
+    if (answers.q2 === "2d") {
+      scores["Heatwave"] += 3;
+      scores["Provoker"] += 2;
+      scores["Generous Giver"] += 1;
+    }
+    if (answers.q2 === "2e") {
+      scores["Promiscuous Plaything"] += 3;
+      scores["Generous Giver"] += 2;
+      scores["Mood Multiplier"] += 1;
+    }
+    if (answers.q2 === "2f") {
+      scores["Charmer in Charge"] += 3;
+      scores["Bedroom Adventurer"] += 2;
+      scores["Dungeon Master"] += 1;
+    }
+    if (answers.q2 === "2g") {
+      scores["Promiscuous Plaything"] += 3;
+      scores["Generous Giver"] += 2;
+      scores["Punish Me"] += 1;
     }
 
-    const roomMap = {
-      "Devoted Darling": "blue",
-      "Mood Multiplier": "blue",
-      "Tender Protector": "blue",
-      "Heatwave": "blue",
-      "Promiscuous Plaything": "green",
-      "Generous Giver": "green",
-      "Bedroom Adventurer": "green",
-      "Charmer in Charge": "green",
-      "Dungeon Master": "red",
-      "Claimed & Trained": "red",
-      "Punish Me": "red",
-      "Provoker": "red"
+    // Q3 scoring (room anchor)
+    if (answers.q3 === "3a") {
+      scores["Devoted Darling"] += 5;
+      scores["Mood Multiplier"] += 5;
+      scores["Tender Protector"] += 5;
+      scores["Generous Giver"] += 5;
+      scores["Heatwave"] += 5;
+    }
+    if (answers.q3 === "3b") {
+      scores["Promiscuous Plaything"] += 5;
+      scores["Bedroom Adventurer"] += 5;
+      scores["Charmer in Charge"] += 5;
+      scores["Mood Multiplier"] += 5;
+      scores["Generous Giver"] += 5;
+    }
+    if (answers.q3 === "3c") {
+      scores["Dungeon Master"] += 5;
+      scores["Claimed & Trained"] += 5;
+      scores["Punish Me"] += 5;
+      scores["Provoker"] += 5;
+    }
+
+    // Q4
+    if (answers.q4 === "4a") {
+      scores["Devoted Darling"] += 3;
+      scores["Mood Multiplier"] += 2;
+      scores["Generous Giver"] += 1;
+      scores["Tender Protector"] += 1;
+    }
+    if (answers.q4 === "4b") {
+      scores["Punish Me"] += 3;
+      scores["Bedroom Adventurer"] += 2;
+      scores["Charmer in Charge"] += 1;
+      scores["Heatwave"] += 1;
+    }
+    if (answers.q4 === "4c") {
+      scores["Dungeon Master"] += 3;
+      scores["Provoker"] += 2;
+      scores["Charmer in Charge"] += 1;
+    }
+    if (answers.q4 === "4d") {
+      scores["Dungeon Master"] += 3;
+      scores["Charmer in Charge"] += 2;
+      scores["Tender Protector"] += 1;
+    }
+    if (answers.q4 === "4e") {
+      scores["Mood Multiplier"] += 2;
+      scores["Claimed & Trained"] += 2;
+      scores["Provoker"] += 2;
+      scores["Heatwave"] += 2;
+      scores["Generous Giver"] += 1;
+      scores["Promiscuous Plaything"] += 1;
+    }
+
+    // Q5
+    if (answers.q5 === "5a") {
+      scores["Promiscuous Plaything"] += 3;
+      scores["Punish Me"] += 1;
+    }
+    if (answers.q5 === "5b") {
+      scores["Bedroom Adventurer"] += 3;
+      scores["Generous Giver"] += 2;
+    }
+    if (answers.q5 === "5c") {
+      scores["Devoted Darling"] += 3;
+      scores["Tender Protector"] += 3;
+      scores["Mood Multiplier"] += 3;
+      scores["Heatwave"] += 3;
+    }
+    if (answers.q5 === "5d") {
+      scores["Dungeon Master"] += 3;
+      scores["Charmer in Charge"] += 2;
+      scores["Provoker"] += 1;
+      scores["Bedroom Adventurer"] += 1;
+    }
+
+    // Q6
+    if (answers.q6 === "6a") {
+      scores["Mood Multiplier"] += 3;
+      scores["Bedroom Adventurer"] += 2;
+      scores["Promiscuous Plaything"] += 1;
+    }
+    if (answers.q6 === "6b") {
+      scores["Provoker"] += 3;
+      scores["Punish Me"] += 2;
+      scores["Dungeon Master"] += 2;
+      scores["Charmer in Charge"] += 1;
+    }
+    if (answers.q6 === "6c") {
+      scores["Devoted Darling"] += 3;
+      scores["Tender Protector"] += 2;
+      scores["Generous Giver"] += 1;
+      scores["Mood Multiplier"] += 1;
+    }
+    if (answers.q6 === "6d") {
+      scores["Charmer in Charge"] += 3;
+      scores["Promiscuous Plaything"] += 2;
+      scores["Bedroom Adventurer"] += 2;
+      scores["Claimed & Trained"] += 1;
+      scores["Dungeon Master"] += 1;
+    }
+
+    // Q7
+    if (answers.q7 === "7a") {
+      scores["Devoted Darling"] += 3;
+      scores["Tender Protector"] += 2;
+      scores["Dungeon Master"] += 1;
+    }
+    if (answers.q7 === "7b") {
+      scores["Mood Multiplier"] += 3;
+      scores["Generous Giver"] += 2;
+      scores["Heatwave"] += 1;
+    }
+    if (answers.q7 === "7c") {
+      scores["Bedroom Adventurer"] += 3;
+      scores["Promiscuous Plaything"] += 2;
+      scores["Charmer in Charge"] += 1;
+    }
+    if (answers.q7 === "7d") {
+      scores["Provoker"] += 3;
+      scores["Punish Me"] += 2;
+      scores["Bedroom Adventurer"] += 1;
+    }
+
+    // Q9
+    if (answers.q9 === "9a") {
+      scores["Dungeon Master"] += 5;
+      scores["Charmer in Charge"] += 5;
+      scores["Tender Protector"] += 5;
+    }
+    if (answers.q9 === "9b") {
+      scores["Claimed & Trained"] += 5;
+      scores["Devoted Darling"] += 5;
+      scores["Promiscuous Plaything"] += 5;
+    }
+    if (answers.q9 === "9c") {
+      scores["Provoker"] += 5;
+      scores["Bedroom Adventurer"] += 5;
+      scores["Generous Giver"] += 5;
+    }
+    if (answers.q9 === "9d") {
+      scores["Mood Multiplier"] += 5;
+      scores["Generous Giver"] += 5;
+      scores["Punish Me"] += 5;
+    }
+
+    // Q10
+    if (answers.q10 === "10a") {
+      scores["Devoted Darling"] += 3;
+      scores["Mood Multiplier"] += 3;
+      scores["Tender Protector"] += 3;
+      scores["Generous Giver"] += 3;
+      scores["Heatwave"] += 3;
+    }
+    if (answers.q10 === "10b") {
+      scores["Charmer in Charge"] += 3;
+      scores["Promiscuous Plaything"] += 2;
+      scores["Tender Protector"] += 2;
+      scores["Heatwave"] += 2;
+      scores["Generous Giver"] += 1;
+    }
+    if (answers.q10 === "10c") {
+      scores["Claimed & Trained"] += 3;
+      scores["Promiscuous Plaything"] += 3;
+      scores["Punish Me"] += 2;
+    }
+    if (answers.q10 === "10d") {
+      scores["Dungeon Master"] += 3;
+      scores["Claimed & Trained"] += 3;
+      scores["Punish Me"] += 3;
+      scores["Provoker"] += 3;
+    }
+    if (answers.q10 === "10e") {
+      scores["Devoted Darling"] += 4;
+      scores["Mood Multiplier"] += 4;
+      scores["Tender Protector"] += 4;
+      scores["Generous Giver"] += 4;
+      scores["Heatwave"] += 4;
+    }
+
+    const topType = Object.entries(scores).sort((a, b) => b[1] - a[1])[0][0];
+    const roomColor = {
+      "Devoted Darling": "blue", "Mood Multiplier": "blue", "Tender Protector": "blue", "Heatwave": "blue",
+      "Promiscuous Plaything": "green", "Generous Giver": "green", "Bedroom Adventurer": "green", "Charmer in Charge": "green",
+      "Dungeon Master": "red", "Claimed & Trained": "red", "Punish Me": "red", "Provoker": "red"
+    }[topType];
+
+    document.body.classList.add(roomColor);
+        const imageSafeName = topType.toLowerCase().replace(/[\s&]+/g, "_");
+    const imagePath = `images/${imageSafeName}_${gender}.jpg`;
+    const profilePath = `/premium/erotic-blueprint_${imageSafeName}.html`;
+
+    const roomTitleMap = {
+      blue: "Meet your type in the <span style='color:#e1bf78;'>BLUE ROOM</span>",
+      green: "Meet your type in the <span style='color:#e1bf78;'>GREEN ROOM</span>",
+      red: "Meet your type in the <span style='color:#e1bf78;'>RED ROOM</span>"
     };
-
-    const room = roomMap[resultType];
-    document.body.classList.add(room);
-    document.getElementById("roomTitle").innerHTML = `Meet your type in the <span style="color: #e1bf78;">${room.toUpperCase()} ROOM</span>`;
-
-    const imageSafe = resultType.toLowerCase().replace(/[^a-z]/g, "_");
-    const genderSuffix = gender === "8a" ? "male" : "female";
-    const profileURL = `/premium/erotic-blueprint_${imageSafe}.html`;
-    const imagePath = `/images/${imageSafe}_${genderSuffix}.jpg`;
+    document.getElementById("roomTitle").innerHTML = roomTitleMap[roomColor];
 
     document.getElementById("archetypeText").innerHTML = `
-      <div class="archetype-name">
-        <a href="${profileURL}" style="color: gold; text-decoration: underline;">${resultType}</a>
+      <div style="text-decoration: underline; font-weight: normal; margin-bottom: 6px;">
+        Your Sexual Profile:
       </div>
-      <img src="${imagePath}" alt="${resultType}" class="no-save">
-      <div class="slogan">Click to reveal your full sexual profile</div>
+      <div class="archetype-name">
+        <a href="${profilePath}" class="no-underline">${topType}</a>
+      </div>
+      <a href="${profilePath}">
+        <img src="${imagePath}" alt="${topType}" class="no-save" oncontextmenu="return false">
+      </a>
+      <div class="profile-caption">
+        <a href="${profilePath}" class="no-underline">Click here to reveal your full sexual profile</a>
+      </div>
     `;
-  </script>
 
-  <div class="section">
-    <a href="/archetype-gallery.html">
-      <button>See All Sexual Profiles</button>
-    </a>
-  </div>
+    const compatibility = {
+      "Devoted Darling": ["Tender Protector", "Heatwave", "Promiscuous Plaything"],
+      "Mood Multiplier": ["Heatwave", "Tender Protector", "Bedroom Adventurer"],
+      "Heatwave": ["Mood Multiplier", "Devoted Darling", "Generous Giver"],
+      "Tender Protector": ["Devoted Darling", "Mood Multiplier", "Promiscuous Plaything"],
+      "Promiscuous Plaything": ["Charmer in Charge", "Bedroom Adventurer", "Dungeon Master"],
+      "Generous Giver": ["Bedroom Adventurer", "Charmer in Charge", "Provoker"],
+      "Bedroom Adventurer": ["Generous Giver", "Promiscuous Plaything", "Punish Me"],
+      "Charmer in Charge": ["Promiscuous Plaything", "Generous Giver", "Claimed & Trained"],
+      "Claimed & Trained": ["Dungeon Master", "Provoker", "Charmer in Charge"],
+      "Punish Me": ["Provoker", "Claimed & Trained", "Bedroom Adventurer"],
+      "Provoker": ["Punish Me", "Claimed & Trained", "Generous Giver"],
+      "Dungeon Master": ["Claimed & Trained", "Punish Me", "Promiscuous Plaything"]
+    };
+
+    const matches = compatibility[topType];
+    if (matches) {
+      document.getElementById("compatibilityText").innerHTML = `
+        <strong>Top 3 Compatibility Matches:</strong><br>
+        🥇 ${matches[0]}<br>
+        🥈 ${matches[1]}<br>
+        🥉 ${matches[2]}
+      `;
+    }
+
+    function copyShareURL() {
+      const shareURL = window.location.href;
+      navigator.clipboard.writeText(shareURL).then(() => {
+        alert("Link copied to clipboard! Share your results.");
+      });
+    }
+  </script>
 
   <footer style="text-align: center; margin-top: 40px;">
     <p style="font-size: 0.8rem; color: white; opacity: 0.7;">
